--- a/VRChat/88/1292988.html
+++ b/VRChat/88/1292988.html
@@ -77,9 +77,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "lab-hry" data-product-category="127" data-product-id=
-        "1292988" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="lab-hry" data-product-category="127"
+        data-product-id="1292988" data-product-list="market_show"
         data-product-price="400" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -103,17 +103,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -124,13 +124,13 @@
                             <img alt="Haribote-Lab" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/6172105/icon_image/c26e74a0-35d2-42dc-9ae4-3909774bb61d_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               Haribote-Lab
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           [3Dモデル]使い捨てマスク[折り畳み可]
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -269,18 +269,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1292988"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "[3Dモデル]使い捨てマスク[折り畳み可] | Haribote-Lab"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1292988"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "[3Dモデル]使い捨てマスク[折り畳み可] | Haribote-Lab"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1292988"
@@ -290,7 +289,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -336,8 +335,8 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
                             花粉がひどくなってきたのでマスクを作りました。
                             シェイプキーで畳んでずらして顎マスク状態にもできます。
                             下部説明と利用規約を読んだ上での利用をお願いします。 ポリゴン数：三角面624
@@ -346,8 +345,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
