--- a/VRChat/38/1304038.html
+++ b/VRChat/38/1304038.html
@@ -25,6 +25,7 @@
     "https://booth.pximg.net/c/620x620/37301c7a-40ea-4639-a455-c5e6e35d3d3b/i/1304038/c5b9bb59-9e7b-4e54-99ba-fe13dc19b225_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1304038">
+    <meta name="ga:shop" content="UA-156452272-1">
     <meta name="skip_auto_login" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
