--- a/VRChat/38/1297038.html
+++ b/VRChat/38/1297038.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/37301c7a-40ea-4639-a455-c5e6e35d3d3b/i/1297038/9dc5c989-6602-4e29-a859-9c47a6fc1ecf_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1297038">
+    <meta name="ga:shop" content="UA-156452272-1">
     <meta name="skip_auto_login" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
