--- a/VRChat/94/1291494.html
+++ b/VRChat/94/1291494.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/37301c7a-40ea-4639-a455-c5e6e35d3d3b/i/1291494/cae22d28-7df9-4d1a-836c-5a8a1c19cf24_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1291494">
+    <meta name="ga:shop" content="UA-156452272-1">
     <meta name="skip_auto_login" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
