--- a/VRChat/60/1262960.html
+++ b/VRChat/60/1262960.html
@@ -80,7 +80,7 @@
         <div class="market-item-detail u-bg-white"
         data-product-brand="sakamochi" data-product-category="127"
         data-product-id="1262960" data-product-list="market_show"
-        data-product-price="400" data-tracking="detail_item">
+        data-product-price="100" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
               <div class="container">
@@ -209,7 +209,7 @@
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
                                     <div class="variation-name">
-                                      牛丼を奢る(内容は無料版と同じ)
+                                      ブースト用(内容は無料版と同じ)
                                     </div>
                                     <div class=
                                     "variation-caption variation-caption--type">
@@ -218,7 +218,7 @@
                                   </div>
                                   <div class=
                                   "variation-price u-text-right">
-                                    ¥ 400
+                                    ¥ 100
                                   </div>
                                 </div>
                                 <div class="variation-cart">
@@ -231,7 +231,7 @@
                                       "patch"><button class=
                                       "btn add-cart full-length"
                                       data-product-id="1262960"
-                                      data-product-price="400"
+                                      data-product-price="100"
                                       data-product-brand=
                                       "sakamochi"
                                       data-product-category="127"
@@ -248,7 +248,7 @@
                                         <button class=
                                         "btn add-cart full-length"
                                         data-product-id="1262960"
-                                        data-product-price="400"
+                                        data-product-price="100"
                                         data-product-brand=
                                         "sakamochi"
                                         data-product-category="127"
