--- a/VRChat/43/1213543.html
+++ b/VRChat/43/1213543.html
@@ -27,6 +27,7 @@
     "https://booth.pximg.net/c/620x620/37301c7a-40ea-4639-a455-c5e6e35d3d3b/i/1213543/c1dbb967-2aff-4138-92d5-702e9928f963_base_resized.jpg">
     <meta property="og:url" content=
     "https://booth.pm/ja/items/1213543">
+    <meta name="ga:shop" content="UA-156452272-1">
     <meta name="skip_auto_login" content="">
     <meta name="ga_dimension1" content="customer">
     <meta name="ga_dimension2" content="no">
